# cadence-app

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  main.c
mcp/: CMakeLists.txt
mcp/include/cadence/: cd_mcp.h  cd_mcp_agent.h  cd_mcp_async.h  cd_mcp_error.h  cd_mcp_fuzzy_match.h  cd_mcp_log.h  cd_mcp_socket.h  cd_mcp_tcp.h  cd_mcp_tool_state.h  cd_mcp_tools.h  cd_mcp_ws.h
mcp/src/: .gitkeep  cd_mcp_agent.c  cd_mcp_ai_tools.c  cd_mcp_anim_tools.c  cd_mcp_asset_gen_tools.c  cd_mcp_asset_pipeline_tools.c  cd_mcp_asset_tools.c  cd_mcp_async.c  cd_mcp_audio_bus_tools.c  cd_mcp_build_tools.c  cd_mcp_camera_tools.c  cd_mcp_compose_tools.c  cd_mcp_cook_tools.c  cd_mcp_debug_tools.c  cd_mcp_dialogue_tools.c  cd_mcp_edit_tools.c  cd_mcp_error.c  cd_mcp_file_tools.c  cd_mcp_fuzzy_match.c  cd_mcp_gamespec_plan_tools.c  cd_mcp_gamespec_tools.c  cd_mcp_input_tools.c  cd_mcp_inventory_tools.c  cd_mcp_lock_tools.c  cd_mcp_log.c  cd_mcp_log_tools.c  cd_mcp_material_tools.c  cd_mcp_mesh_tools.c  cd_mcp_nav_tools.c  cd_mcp_net_tools.c  cd_mcp_node_tools.c  cd_mcp_observe_tools.c  cd_mcp_play_tools.c  cd_mcp_prefab_tools.c  cd_mcp_profiler_tools.c  cd_mcp_project_tools.c  cd_mcp_prop_tools.c  cd_mcp_scene_save_tools.c  cd_mcp_scene_stream_tools.c  cd_mcp_scene_tools.c  (+18 more)
runtime/: CMakeLists.txt  main.c
